--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"nette/utils": "^2|^3",
 		"guzzlehttp/guzzle": "^6",
 		"symfony/console": "^v4",
-		"symfony/cache": "^4",
+		"symfony/cache": ">=4.3.8",
 		"psr/cache": "^1",
 		"php": ">=7.1",
 		"ext-json": "*"
